--- a/src/SimpleK8.ControlPlane/SimpleK8.ControlPlane.csproj
+++ b/src/SimpleK8.ControlPlane/SimpleK8.ControlPlane.csproj
@@ -1,19 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\SimpleK8.Application\SimpleK8.Application.csproj" />
       <ProjectReference Include="..\SimpleK8.Core\SimpleK8.Core.csproj" />
+      <ProjectReference Include="..\SimpleK8.Worker\SimpleK8.Worker.csproj" />
     </ItemGroup>
 
 </Project>
