--- a/src/SimpleK8.ControlPlane/SimpleK8.ControlPlane.csproj
+++ b/src/SimpleK8.ControlPlane/SimpleK8.ControlPlane.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\SimpleK8.Worker\SimpleK8.Worker.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.1" />
+    </ItemGroup>
+
 </Project>
