--- a/src/SimpleK8.Core/SimpleK8.Core.csproj
+++ b/src/SimpleK8.Core/SimpleK8.Core.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SimpleK8.DataContracts\SimpleK8.DataContracts.csproj" />
+    </ItemGroup>
+
 </Project>
