--- a/src/SimpleK8.Application/SimpleK8.Application.csproj
+++ b/src/SimpleK8.Application/SimpleK8.Application.csproj
@@ -13,4 +13,9 @@
       <ProjectReference Include="..\SimpleK8.Worker\SimpleK8.Worker.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.4.1" />
+      <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+    </ItemGroup>
+
 </Project>
