Add docker-compose for etcd

--- a/src/SimpleK8.Api/SimpleK8.Api.csproj
+++ b/src/SimpleK8.Api/SimpleK8.Api.csproj
@@ -28,6 +28,7 @@
       <ProjectReference Include="..\SimpleK8.Application\SimpleK8.Application.csproj" />
       <ProjectReference Include="..\SimpleK8.ControlPlane\SimpleK8.ControlPlane.csproj" />
       <ProjectReference Include="..\SimpleK8.Core\SimpleK8.Core.csproj" />
+      <ProjectReference Include="..\SimpleK8.Infrastructure\SimpleK8.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
