--- a/src/SimpleK8.Console/SimpleK8.Console.csproj
+++ b/src/SimpleK8.Console/SimpleK8.Console.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
+      <PackageReference Include="Polly" Version="8.5.1" />
     </ItemGroup>
 
     <ItemGroup>
