--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   etcd:
+    container_name: simplek8-etcd
     image: bitnami/etcd:latest
     environment:
       - ALLOW_NONE_AUTHENTICATION=yes
@@ -7,6 +8,27 @@ services:
       - "2379:2379"
     volumes:
       - etcd-data:/bitnami/etcd
+    networks:
+      - simplek8
+  
+  api:
+    container_name: simplek8-api
+    build:
+      context: ./src
+      dockerfile: Dockerfile
+    ports:
+      - "5077:8080"
+    depends_on:
+      - etcd
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__etcd=http://etcd:2379
+    networks:
+      - simplek8
 
 volumes:
   etcd-data:
+
+networks:
+  simplek8:
+    name: simplek8
