Limit memory consumption for API to 256MB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,10 @@ services:
       - ConnectionStrings__etcd=http://etcd:2379
     networks:
       - simplek8
+    deploy:
+      resources:
+        limits:
+          memory: 256M
 
 volumes:
   etcd-data:
