--- a/src/SimpleK8.Simulation.Console/appsettings.json
+++ b/src/SimpleK8.Simulation.Console/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "KubernetesApi": {
+        "AppsBaseAddress": "http://localhost:5088/apis/app/v1/"
+    },
     "Serilog": {
         "MinimumLevel": {
             "Default": "Debug",
