--- a/src/SimpleK8.Application/SimpleK8.Application.csproj
+++ b/src/SimpleK8.Application/SimpleK8.Application.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+      <PackageReference Include="Riok.Mapperly" Version="4.1.1" />
     </ItemGroup>
 
 </Project>
