--- a/src/SimpleK8.Api/SimpleK8.Api.csproj
+++ b/src/SimpleK8.Api/SimpleK8.Api.csproj
@@ -32,7 +32,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SimpleK8.Application\SimpleK8.Application.csproj" />
+      <ProjectReference Include="..\SimpleK8.Api.Application\SimpleK8.Api.Application.csproj" />
       <ProjectReference Include="..\SimpleK8.Core\SimpleK8.Core.csproj" />
       <ProjectReference Include="..\SimpleK8.Infrastructure\SimpleK8.Infrastructure.csproj" />
     </ItemGroup>
